syntax = "proto3";

package com.itrjp.im.proto.uid;
option java_outer_classname = "UidProto";

service Uid{
  // onMessage
  rpc genUid(MessageRequest) returns (ApiResponse){}

}
message MessageRequest{

}
message ApiResponse{
  int32 code = 1;
  string message = 2;
  int64 uid = 3;
}